--- a/app/src/main/res/layout/fragment_ajustes.xml
+++ b/app/src/main/res/layout/fragment_ajustes.xml
@@ -19,6 +19,33 @@
             android:orientation="vertical"
             android:gravity="center">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp">
+
+                <ImageView
+                    android:id="@+id/To_Home"
+                    android:layout_width="54dp"
+                    android:layout_height="54dp"
+                    android:layout_marginRight="230dp"
+                    android:src="@drawable/hogar"
+                    android:clickable="true"
+                    android:visibility="invisible"
+                    android:layout_gravity="start" />
+
+                <ImageView
+                    android:id="@+id/To_Perfil"
+                    android:layout_width="54dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="end"
+                    android:src="@drawable/usu2" />
+
+            </LinearLayout>
+
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="100dp"
