--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -17,14 +17,33 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iconoIzquierda"
-                android:layout_width="51dp"
-                android:layout_height="54dp"
-                android:layout_gravity="right"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/engranaje" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp">
+
+                <ImageView
+                    android:id="@+id/To_Home"
+                    android:layout_width="54dp"
+                    android:layout_height="54dp"
+                    android:layout_marginRight="230dp"
+                    android:src="@drawable/hogar"
+                    android:clickable="true"
+                    android:visibility="invisible"
+                    android:layout_gravity="start" />
+
+                <ImageView
+                    android:id="@+id/To_Ajustes"
+                    android:layout_width="54dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="end"
+                    android:src="@drawable/engranaje" />
+
+            </LinearLayout>
+
 
 
             <TextView
